add github links to navbar

--- a/src/html/project.html
+++ b/src/html/project.html
@@ -47,8 +47,26 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">APIs (will upload soon)</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Github (will upload soon)</a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">Github</a>
+
+                        <ul class="dropdown-menu">
+                            <li>
+                                <a class="dropdown-item"
+                                    href="https://github.com/NikhilRJ2017/Issue-Tracker-Application-Backend"
+                                    target="_blank">Backend Code</a>
+                            </li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li>
+                                <a class="dropdown-item"
+                                    href="https://github.com/NikhilRJ2017/Issue-Tracker-Application-Frontend"
+                                    target="_blank">Frontend
+                                    Code</a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
 
@@ -268,7 +286,7 @@
     <!-- *axios cdn -->
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
-     <!-- *Custom JS -->
+    <!-- *Custom JS -->
     <script type="module" src="../js/project.js"></script>
     <script type="module" src="../js/auth/logout.js"></script>
     <script type="module" src="../js/issue/show_project_details.js"></script>
