--- a/src/html/home.html
+++ b/src/html/home.html
@@ -42,7 +42,7 @@
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">APIs (will upload soon)</a>
+                        <a class="nav-link" href="https://documenter.getpostman.com/view/21774268/VUjSEiSr">API Docs</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
