make api doc link to open in new tab

--- a/src/html/project.html
+++ b/src/html/project.html
@@ -45,7 +45,7 @@
                         <a class="nav-link active" aria-current="page" href="/src/html/home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="https://documenter.getpostman.com/view/21774268/VUjSEiSr">API Docs</a>
+                        <a class="nav-link" href="https://documenter.getpostman.com/view/21774268/VUjSEiSr" target="_blank">API Docs</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
